Fix to the topic spacing.

--- a/wp-content/themes/standard-industries/styles/modules/_topic.scss
+++ b/wp-content/themes/standard-industries/styles/modules/_topic.scss
@@ -55,6 +55,10 @@
     @include section-header;
 
     margin-bottom: 0;
+
+    @include large-and-up {
+      margin-bottom: 0;
+    }
   }
 
   &__eyebrow {
@@ -204,6 +208,10 @@
     .topic__left {
       padding-bottom: 120px;
       padding-top: 120px;
+
+      @include large-and-up {
+        overflow: visible;
+      }
     }
 
     .topic__header {
@@ -211,6 +219,13 @@
 
       @include large-and-up {
         margin: 60px 0;
+      }
+    }
+
+    .topic__heading {
+      @include large-and-up {
+        max-width: $max-width-hero;
+        width: 150%;
       }
     }
   }
